--- a/users/templates/reg.html
+++ b/users/templates/reg.html
@@ -1,18 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Регистрация</title>
+{% extends 'base.html' %}
+{% block title %}Регистрация{% endblock %}
     {% load user_filters %}
     {% load static %}
+    {% block static %}
     <link rel="stylesheet" href="{% static 'pages/form.css' %}">
-</head>
-<body class="body">
-    {% include "navNotAuth.html" %}
-<main class="main container">
+    {% endblock %}
+    {% block content %}
     <div class="main__header">
         <h1 class="main__title">Регистрация</h1>
     </div>
@@ -37,7 +30,4 @@
     </div>
 
 
-</main>
-{% include 'footer.html' %}
-</body>
-</html>
+{% endblock %}
