--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -1,18 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Изменить пароль</title>
-    {% load static %}
+{% extends 'base.html' %}
+{% block title %}Изменить пароль{% endblock %}
     {% load user_filters %}
+    {% load static %}
+    {% block static %}
     <link rel="stylesheet" href="{% static 'pages/form.css' %}">
-</head>
-<body class="body">
-{% include "navAuth.html" %}
-<main class="main container">
+    {% endblock %}
+    {% block content %}
     <div class="main__header">
         <h1 class="main__title">Изменить пароль</h1>
     </div>
@@ -22,7 +15,7 @@
             <div class="form__group">
                 <label for="id_oldPassword" class="form__label">Старый пароль</label>
                 <div class="form__field-group">
-                    <input type="text" name="old_password" id="id_oldPassword" class="form__input">
+                    <input type="password" name="old_password" id="id_oldPassword" class="form__input">
                     
                 </div>
             </div>
@@ -51,7 +44,4 @@
     </div>
 
 
-</main>
-{% include 'footer.html' %}
-</body>
-</html>
+{% endblock %}
