--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,17 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Войти на сайт</title>
+{% extends 'base.html' %}
+{% block title %}Войти на сайт{% endblock %}
     {% load static %}
+    {% block static %}
     <link rel="stylesheet" href="{% static 'pages/form.css' %}">
-</head>
-<body class="body">
-    {% include "navNotAuth.html" %}
-<main class="main container">
+    {% endblock %}
+    {% block content %}
     <div class="main__header">
         <h1 class="main__title">Войти на сайт</h1>
     </div>
@@ -34,12 +27,9 @@
             </div>
             <div class="form__footer">
                 <button class="button button_style_blue">Войти</button>
-                <a href="/auth/password_reset/" class="form__forgot-link">Забыли пароль?</a>
+                <a href="{% url 'password_reset'}" class="form__forgot-link">Забыли пароль?</a>
             </div>
         </form>
     </div>
       
-</main>
-{% include 'footer.html' %}
-</body>
-</html>
+{% endblock %}
