--- a/users/templates/registration/password_change_done.html
+++ b/users/templates/registration/password_change_done.html
@@ -1,22 +1,16 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Регистрация</title>
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'pages/form.css' %}">
-    </head>
-    <body>
-        {% include 'navAuth.html' %}
-    <main>
+{% extends 'base.html' %}
+{% block title %}Регистрация{% endblock %}
+    {% load user_filters %}
+    {% load static %}
+    {% block static %}
+    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+    {% endblock %}
+    {% block content %}
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 p-5">
                         <div class="card">
-                            <div class="card-header">Пароль изменён</div>
+                            <div class="card-header">Пароль изменён успешно </div>
                             <div class="card-body">
                                 <p>Пароль изменён успешно</p>
                             </div> <!-- card body -->
@@ -27,5 +21,4 @@
         </main>
         {% include 'footer.html' %}
          
-    </body>
-</html>
+{% endblock%}
