--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer__container container">
-
-
+        <li class="footer__item"><a href="{% url 'about-author' %}" class="footer__link link">Об авторе </a></li>
+        <li class="footer__item"><a href="{% url 'technologies' %}" class="footer__link link">Технологии</a></li>
     </div>
 </footer>
