--- a/recipes/templates/singleRecipe.html
+++ b/recipes/templates/singleRecipe.html
@@ -34,7 +34,7 @@
                     <p class="single-card__text"><span class="icon-time"></span>{{ recipe.duration }} мин.</p>
                     <ul class="single-card__items">
                         <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span>{{ recipe.author.username }}</p></li>
-                        {% if user == recipe.author %}
+                        {% if user.is_authenticated and user == recipe.author %}
                         <li class="single-card__item">  
                             <a 
                             style="margin-left: 2.5em" 
@@ -45,19 +45,21 @@
                     </ul>
                 </div>
                 <ul class="single-card__items">
-                    {% if recipe|is_in_cart:user %}
-                    <li class="single-card__item"><button class="button button_style_blue" name="purchpurchases">Удалить из покупок</button>
-                    {% else%}
-                        <li class="single-card__item"><button class="button button_style_blue" name="purchpurchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
-                    {% endif %}
-                    {% if user.is_authenticated and user != profile %}
-                    <div class="author-subscribe">
-                        {% if is_follow %}
-                            <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться от автора</button></p>
-                        {% else %}
-                            <button class="button button_style_light-blue button_size_auto" name="subscribe" data-out>Подписаться на автора</button></p>
+                    {% if user.is_authenticated %}
+                        {% if recipe|is_in_cart:user %}
+                        <li class="single-card__item"><button class="button button_style_blue" name="purchpurchases">Удалить из покупок</button>
+                        {% else%}
+                            <li class="single-card__item"><button class="button button_style_blue" name="purchpurchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
                         {% endif %}
-                    </div>
+                        {% if user != profile %}
+                        <div class="author-subscribe">
+                            {% if is_follow %}
+                                <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться от автора</button></p>
+                            {% else %}
+                                <button class="button button_style_light-blue button_size_auto" name="subscribe" data-out>Подписаться на автора</button></p>
+                            {% endif %}
+                        </div>
+                        {% endif %}
                     {% endif %}
                 </ul>
                 <div class="single-card__section">
